Chenged items after carousel

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <!-- Welcome Message -->
         <div class="text-center mt-4">
           <div class="text-heading text-muted text-lg">Welcome To</div>
-          <h1 class="my-2">Git</h1>
+          <h1 class="my-2">this Git course</h1>
           <div class="text-heading text-muted text-lg">By
-            <strong>Start Bootstrap</strong>
+            <strong>Simon Xenitellis</strong>
           </div>
         </div>
       </div>
