Revert "Commiting our third mistake"
This reverts commit 675ed0633f283ec718cfa69a84284afa7a5bc4be.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         </div>
         <!-- Welcome Message -->
         <div class="text-center mt-4">
-          <div class="text-heading text-muted text-lg">Our First Mistake To</div>
-          <h1 class="my-2">Our Second mistake</h1>
+          <div class="text-heading text-muted text-lg">Welcome To</div>
+          <h1 class="my-2">this Git course</h1>
           <div class="text-heading text-muted text-lg">By
-            <strong>our third mistake</strong>
+            <strong>Simon Xenitellis</strong>
           </div>
         </div>
       </div>
