--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Beautiful boxes to
-          <strong>showcase your content</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Feature B
+          <strong>our second branch</strong>
         </h2>
         <hr class="divider">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
