--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Git Your Website 2017</p>
       </div>
     </footer>
 
