--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     </div>
     <!-- /.container -->
 
-    <footer class="bg-faded text-center py-5">
+    <footer class="bg-faded text-center py-5" id="footerText">
       <div class="container">
-        <p class="m-0">Git Your Website 2017</p>
+        <p class="m-0" style="color:#fab11c;">Git Your Website 2017</p>
       </div>
     </footer>
 
